feat: implementa MMI e MCTX da fase 3
